# skeleton

./: .gitignore  CMakeLists.txt
benchmarks/: CMakeLists.txt  bench_concurrent_linked_list.cpp
cmake/: FetchGoogleBench.cmake
examples/: CMakeLists.txt  concurrent_linked_list.cpp
include/skeleton/: concurrent_linked_list.hpp
include/skeleton/detail/: launcher.hpp
